<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:foreground="?android:attr/selectableItemBackground"
    android:padding="@dimen/card_padding"
    android:layout_margin="@dimen/spacer_8dp"
    android:layout_gravity="center_horizontal"
    app:cardCornerRadius="5dp"
    app:cardUseCompatPadding="false"
    app:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/spacer_6dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacer_10dp"
            style="@style/FormTextViewBold"
            android:text="@string/record_details"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacer_1dp"
            android:layout_marginStart="@dimen/spacer_12dp"
            android:layout_marginEnd="@dimen/spacer_12dp"
            android:background="@color/colorBlack34alpha"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacer_4dp"
            android:paddingStart="@dimen/spacer_16dp"
            android:paddingEnd="@dimen/spacer_16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_id_icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/unique_id_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextView.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/unique_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextView"
                        android:textColorHint="@color/colorMaterialBlack_no_alpha"
                        android:maxLines="1"
                        android:inputType="textCapCharacters"
                        android:imeOptions="actionDone"
                        android:hint="@string/Unique_Survey_Id" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_hash"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/serial_no_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextView.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/serial_no"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextView"
                        android:maxLines="1"
                        android:hint="@string/Serial_no" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_location"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/locality_tv_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextView.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/locality_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextView"
                        android:hint="@string/Locality" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_map"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|start">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacer_4dp"
                        android:paddingEnd="@dimen/spacer_4dp"
                        style="@style/HintTextView"
                        android:text="@string/State"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/state_spinner"
                        style="@style/Spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:entries="@array/indian_states"
                        android:prompt="@string/select_state"
                        android:spinnerMode="dialog" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_user_icon"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/collector_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/TextView.Hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/collector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextView"
                        android:inputType="textPersonName"
                        android:imeOptions="actionDone"
                        android:hint="@string/Collector" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_nature_habitat"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|start">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacer_4dp"
                        android:paddingEnd="@dimen/spacer_4dp"
                        style="@style/HintTextView"
                        android:text="@string/Habitat"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/habitat_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Spinner"
                        android:spinnerMode="dialog"
                        android:entries="@array/Habitat_items"
                        android:prompt="@string/select_habitat"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_insect"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|start">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacer_4dp"
                        android:paddingEnd="@dimen/spacer_4dp"
                        style="@style/HintTextView"
                        android:text="@string/Entomofauna"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/entomofauna_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Spinner"
                        android:entries="@array/binary"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_snail"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|start">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacer_4dp"
                        android:paddingEnd="@dimen/spacer_4dp"
                        style="@style/HintTextView"
                        android:text="@string/Other_Invertebrate"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/otherInvertebrate_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Spinner"
                        android:entries="@array/binary"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="@dimen/spacer_16dp"
                    app:srcCompat="@drawable/ic_bird_small"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|start">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/spacer_4dp"
                        android:paddingEnd="@dimen/spacer_4dp"
                        style="@style/HintTextView"
                        android:text="@string/Vertebrate"/>

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/vertebrate_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Spinner"
                        android:entries="@array/binary"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>